# tonic-rest

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  bacon.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
crates/tonic-rest/: Cargo.toml  README.md
crates/tonic-rest-build/: Cargo.toml  README.md
crates/tonic-rest-build/src/: descriptor.rs  helpers.rs  lib.rs
crates/tonic-rest-build/src/codegen/: config.rs  emit.rs  extract.rs  mod.rs  types.rs
crates/tonic-rest-build/testdata/: basic_crud.rs  enum_path_param.rs  multi_service.rs  put_body_path.rs  streaming_uuid_auth.rs
crates/tonic-rest-core/: Cargo.toml  LICENSE-APACHE  README.md
crates/tonic-rest-core/src/: descriptor.rs  lib.rs
crates/tonic-rest-openapi/: Cargo.toml  README.md
crates/tonic-rest-openapi/src/: config.rs  discover.rs  error.rs  lib.rs  main.rs
crates/tonic-rest-openapi/src/patch/: cleanup.rs  helpers.rs  mod.rs  oas31.rs  responses.rs  security.rs  streaming.rs  validation.rs
crates/tonic-rest-openapi/tests/: pipeline.rs
crates/tonic-rest/src/: lib.rs  serde.rs
crates/tonic-rest/src/runtime/: error.rs  mod.rs  request.rs  sse.rs  status_map.rs
crates/tonic-rest/tests/: integration.rs
docs/: ARTICLE.md
